--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,19 @@ main {
   justify-content: space-between;
 }
 
+.error {
+  font-size: 12rem;
+  -webkit-text-stroke: 0.15rem #fff;
+  -webkit-text-fill-color: transparent;
+}
+
+.back {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 .line .amp:hover {
   -webkit-text-stroke: 0.15rem #fff;
   -webkit-text-fill-color: transparent;
@@ -167,4 +180,20 @@ main .discord:hover > span:nth-child(7) {
 
 main .contact:hover > span {
   transform: translate(40%, -5%) rotate(15deg);
+}
+
+main .back:hover > span:nth-child(1) {
+  transform: translate(10%, -5%) rotate(8deg);
+}
+
+main .back:hover > span:nth-child(2) {
+  transform: translate(5%, -14%) rotate(-4deg);
+}
+
+main .back:hover > span:nth-child(3) {
+  transform: translate(10%, 12%) rotate(-3deg);
+}
+
+main .back:hover > span:nth-child(4) {
+  transform: translate(0%, -5%) rotate(-8deg);
 }
